# PydanticAi-with-Rag

./: .gitignore  DeepSeek - Into the Unknown.html  README.md  Seed_OS.html  main.py  pyproject.toml  requirements.txt  tem.ppy
data/: data.json
src/: chatbot.py  commands.py  embedding.py  logger.py  models.py  pdf_processing.py  settings.py  utils.py
src/config/: settings.py
