[project]
name = "pydanticai-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "litellm>=1.73.6",
    "logfire>=3.21.1",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.91.0",
    "pydantic-ai[examples]>=0.3.4",
    "pypdf2>=3.0.1",
]
